Fixing transport layout
Some layout issues were introduced when adding the error
message that is displayed when WebAudio is not enabled.

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -245,6 +245,11 @@ input.note:focus {
     justify-content: space-between;
   }
 
+  .transport-inner {
+    -webkit-flex: 1;
+    flex: 1;
+  }
+
   .transport-controls {
     width: 100%;
   }
